refactor: merge image options into UBP
